--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (https://username.github.io) then use these settings:
-url: "https://KryssyCo.github.io"
+url: "https://kryssyco.github.io"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
