--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ social-network-links:
 #  instagram: deanat78
 #  youtube: user/deanat78
 #  spotify: yourname
-   telephone: +1720-879-4950
+#  telephone: +1720-879-4950
 #  steam: deanat78
 #  twitch: yourname
 #  yelp: yourname
