--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ avatar: "/img/avatar-icon.png"
 
 navbar-col: "#7997C4"
 navbar-text-col: "#404040"
-navbar-children-col: "#F5F5F5"
+navbar-children-col: "#7997C4"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
