--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ footer-link-col: "#404040"
 # instead of colour
 
 # navbar-img: "/img/bgimage.png"
-# footer-img: "github.com/KryssyCo/hello_world/blob/master/code%20image.jfif"
+# footer-img: "/img/bgimage.png"
 # page-img: "/img/bgimage.png"
 
 # --- Footer options --- #
