--- a/_config.yml
+++ b/_config.yml
@@ -14,20 +14,20 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: Krista Shepard
+title: From Social Work to Data Science
 
 # Short description of your site
-description: Data Scientist
+description: This is my journey from being a Social Worker, to becoming a Data Scientist.
 
 # --- Navigation bar options --- #
 
 # List of links in the navigation bar
 navbar-links:
   About Me: "aboutme"
-#   Resources:
-#     - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
-#     - Learn markdown: "http://www.markdowntutorial.com/"
-#     - GitHub Pages: "https://pages.github.com/"
+Resources:
+- Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
+- Learn markdown: "http://www.markdowntutorial.com/"
+- GitHub Pages: "https://pages.github.com/"
 #   Author's home: "http://deanattali.com"
 
 # Image to show in the navigation bar - image must be a square (width = height)
