--- a/_config.yml
+++ b/_config.yml
@@ -42,13 +42,13 @@ avatar: "/img/Kryssyco.jpg"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#7997C4"
+navbar-col: "#b3c5e0"
 navbar-text-col: "#404040"
 navbar-children-col: "#7997C4"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#7997C4"
+footer-col: "#b3c5e0"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 
