--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ Resources:
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/Kryssyco.jpg"
+avatar: "/img/Kryssyco.jfif"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
@@ -42,14 +42,14 @@ avatar: "/img/Kryssyco.jpg"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#b3c5e0"
-navbar-text-col: "#404040"
+navbar-col: "#9299a3"
+navbar-text-col: "#FFFFFF"
 navbar-children-col: "#7997C4"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#b3c5e0"
-footer-text-col: "#777777"
+footer-col: "#9299a3"
+footer-text-col: "#FFFFFF"
 footer-link-col: "#404040"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
