--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ avatar: "/img/Kryssyco.jfif"
 navbar-col: "#9299a3"
 navbar-text-col: "#FFFFFF"
 navbar-children-col: "#7997C4"
-page-col: "#FFFFFF"
+page-col: "#f2f1e8"
 link-col: "#008AFF"
 hover-col: "#0085A1"
 footer-col: "#9299a3"
