--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ Resources:
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/Working(2).jpg"
+avatar: "/img/Kryssyco.jfif"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
