--- a/_config.yml
+++ b/_config.yml
@@ -42,13 +42,13 @@ avatar: "/img/Kryssyco.jpg"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#9299a3"
+navbar-col: "#808080"
 navbar-text-col: "#FFFFFF"
 navbar-children-col: "#7997C4"
 page-col: "#dbd9ce"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#9299a3"
+footer-col: "#808080"
 footer-text-col: "#FFFFFF"
 footer-link-col: "#404040"
 
