--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ social-network-links:
 # twitter: daattali
 #  reddit: yourname
 #  google-plus: +DeanAttali
-  linkedin: krista-shepard-4a677596
+  linkedin: kshepard
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
